# Banana-Ripeness-detection-with-knowledge-distillation

./: .gitignore  Banana_Jupyter-checkpoint.ipynb  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: config.yaml  inference.yaml
src/: __init__.py  inference.py
src/data/: __init__.py  dataloader.py
src/models/: __init__.py  distiller.py  student.py  teacher.py
src/utils/: __init__.py  metrics.py  visualization.py
tests/: test_inference.py  test_metrics.py  test_student.py  test_teacher.py
